[package]
name = "skyfeed-query-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
axum-macros = "0.3.7"
base64 = "0.21.2"
blake3 = "1.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
http = "0.2.9"
lazy_static = "1.4.0"
mimalloc = { version = "0.1.39", default-features = false }
rand = "0.8.5"
regex = "1.8.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.0", features = ["full"] }
tower-http = { version = "0.4.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
